--- a/_data/assignments.yaml
+++ b/_data/assignments.yaml
@@ -411,3 +411,18 @@
       - { name: 'StreetMap.java', link: 'https://drive.google.com/file/d/16wtzboVzDxKv5cDpccyA_J5GRhEuBhJv/view' }
     teacher_files: [ 'Street Map Teacher Walkthrough', 'Street Map Worksheet Answer Key', 'Main.java', 'StreetMap.java' ]
   documentation: [ 'Bridges', 'Color', 'Element', 'GraphAdjList', 'Edge', 'DataSource', 'OsmVertex', 'OsmEdge' ]
+
+- key: 'matt-project'
+  title: 'Matts Project'
+  summary: 'Delete later'
+  tags: [ 'game' ]
+  description: 'Delete later'
+  image_caption: 'Delete later'
+  topics: [ 'Graphs', 'Matt''s algorithm', 'Records']
+  java:
+    student_files:
+      - { name: 'Matt Student Worksheet', link: 'https://docs.google.com/document/d/1v_35mixjUBAOym_KqmJKEcSgFSByhkHhZF-pYWjg52w/view' }
+      - { name: 'Main.java', link: 'https://drive.google.com/file/d/1ecuC6u9K682KEvRnCd0rqF2ws_PqEWJL/view' }
+      - { name: 'StreetMap.java', link: 'https://drive.google.com/file/d/16wtzboVzDxKv5cDpccyA_J5GRhEuBhJv/view' }
+    teacher_files: [ 'Street Matt Teacher Walkthrough', 'Street Matt Worksheet Answer Key', 'Main.java', 'StreetMap.java' ]
+  documentation: [ 'Bridges', 'Color', 'Element', 'GraphAdjList', 'Edge', 'DataSource', 'OsmVertex', 'OsmEdge' ]
