added difficulty rating to projects

--- a/_data/assignments.yaml
+++ b/_data/assignments.yaml
@@ -4,6 +4,7 @@
   title: 'Aquarium'
   summary: 'Learn about arrays of objects by creating an aquarium.'
   tags: [ ]
+  difficulty: 'easy'
   description: 'Arrays in Java are data structures that hold multiple objects in one memory location. They can hold a fixed number of one type of object or variable, but that object can be almost anything. In this project, we will practice manipulating arrays and accessing elements using methods from the Array class. You are the owner of an aquarium with a fixed number of tanks, you also happen to be a little indecisive and like to change which fish go in what tanks. Think of the aquarium as an array, each tank represents an index, and the fish are the objects.'
   topics: [ 'Arrays', 'Classes', 'Loops', 'Booleans and conditionals', 'NonBlockingGame class' ]
   java:
@@ -20,6 +21,7 @@
   title: 'Emoji Builder'
   summary: 'Create a custom emoji using the NonBlockingGame class.'
   tags: [ '2d grid' ]
+  difficulty: 'easy'
   description: 'Students use their undertanding of 2D arrays to create an emoji using the BRIDGES NonBlockingGame class. This project is indended to build student comfort with BRIDGES, so it is ungraded and there is no rubric.'
   topics: [ '2D arrays', 'Row-major order', 'Using API documentation' ]
   outcomes:
@@ -43,6 +45,7 @@
   title: 'Shape Collection'
   summary: 'Draw circles, rectangles, polygons, and text.'
   tags: [ 'vector graphics' ]
+  difficulty: 'easy'
   description: 'Draw circles, rectangles, polygons, and text with the Bridges SymbolCollection class.'
   topics: [ 'Reading source code', 'API usage', 'Creating objects' ]
   java:
@@ -62,6 +65,7 @@
   title: 'Pattern Builder'
   summary: 'Create colorful patterns with the ColorGrid Class.'
   tags: [ '2d grid' ]
+  difficulty: 'easy'
   description: 'Using the BRIDGES ColorGrid class, students solve seven pattern-creation challenges by applying knowledge of conditionals, nested loops, and 2D array traversal.'
   topics: [ 'Nested loops', '2D arrays', 'Conditionals' ]
   outcomes:
@@ -82,6 +86,7 @@
   title: 'Square Fill'
   summary: 'Create random layered squares using the ColorGrid class.'
   tags: [ '2d grid' ]
+  difficulty: 'easy'
   description: 'The BRIDGES library has a class called ColorGrid that allows you to represent an image as a grid of colored cells. The programmer defines the number of rows, number of columns, and default color. In this project, you will use iteration to create layers of squares until the entire grid is filled.'
   image_caption: 'Example output on a 10 by 10 grid'
   topics: [ 'Nested loops', '2D arrays', 'Conditionals' ]
@@ -105,6 +110,7 @@
   title: 'GameBasics I'
   summary: 'Display a custom message and alter it with keyboard input.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'The BRIDGES library has a class called NonBlockingGame that allows you to create simple games based on board grids. In this project, students will use the NonBlockingGame class to create a grid that displays a message, one letter per cell. This is not a game yet, but develops prerequisite understanding.'
   topics: [ '2D arrays', 'API usage (NonBlockingGame class, NamedSymbol enum, NamedColor enum)', 'Inheritance', 'Abstract classes' ]
   outcomes:
@@ -134,6 +140,7 @@
   title: 'GameBasics II'
   summary: 'Create a player that can be moved around the game board with keyboard input.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'In this second game basics project, students use the NonBlockingGame class to create a player that can be moved around the screen with the arrow keys.'
   topics: [ '2D arrays', 'API usage (NonBlockingGame class, NamedSymbol enum, NamedColor enum)', 'Event-driven programming' ]
   outcomes:
@@ -163,6 +170,7 @@
   title: 'BugStomp'
   summary: 'Make a whack-a-mole style game where the player stomps bugs to increase their score.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'BugStomp is a whack-a-mole style game where you use the arrow keys to move your player and attempt to touch or "stomp" the bug. The bug flashes to a random location on the board after a set number of frames. For each bug stomped, the score increases until the player eventually wins. In this project, you will implement the BugStomp game with BRIDGES.'
   topics: [ 'Random class', 'API usage', 'Arrays', 'Nested loops', 'Conditionals' ]
   java:
@@ -178,6 +186,7 @@
   title: 'Rainbow Snake'
   summary: 'Create a colorful Snake game.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'Use the arrow keys to move a snake around the board to eat apples. Try to eat as many apples as possible. It will get more difficult the longer you play, with the snake growing in size for each apple eaten.'
   topics: [ 'API usage', 'Arrays', 'Loops', 'Conditionals', 'ArrayLists', 'Mod' ]
   java:
@@ -197,6 +206,7 @@
   title: 'Tron'
   summary: 'Create a two-player game that resembles the movie Tron.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'In this project, you will use the NonBlockingGame class to make a two-player video game. Each player controls a snake that gets longer and longer, and when one player crashes into something, the other person wins.'
   topics: [ 'ArrayLists', 'Classes', 'Loops', 'Booleans and conditionals', 'NonBlockingGame class' ]
   java:
@@ -212,6 +222,7 @@
   title: 'Monster Adventure'
   summary: 'Player collects fruit while avoiding the monster.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'Monster Adventure is a type of collecting and avoiding game, where the player will be collecting fruits from the map and avoiding the monster, which will follow the player. The player will use the arrow keys to control the character‘s moves around the map. The score will increase until the player eventually wins.'
   topics: [ 'Methods', 'Classes', 'Loops', 'Booleans and conditionals', 'NonBlockingGame class', '2d arrays' ]
   java:
@@ -228,6 +239,7 @@
   title: 'Chaos Game'
   summary: 'Create fractal designs using a chaos game algorithm.'
   tags: [ ]
+  difficulty: 'easy'
   description: 'In this project, students will create fractal designs using a chaos game algorithm. They will learn about Java record classes and will use the BRIDGES GraphAdjList class for creating visualisations.'
   topics: [ 'Record classes', 'Iteration', 'API usage' ]
   java:
@@ -242,6 +254,7 @@
   title: 'Game of Life'
   summary: 'Create an interactive cellular automaton.'
   tags: [ '2d grid' ]
+  difficulty: 'easy'
   description: 'The Game of Life is a two-dimensional cellular automaton invented by John Conway in 1970. The state of each individual cell is determined by simple rules, but patterns of hundreds of cells working together can exhibit complex behavior. In this project, students will create an interactive Game of Life animation using the BRIDGES Java API.'
   topics: [ 'Cellular automata', 'Nested loops', '2D arrays', 'Conditionals', 'Methods', 'API usage' ]
   java:
@@ -256,6 +269,7 @@
   title: 'Sudoku'
   summary: 'Create a program for solving sudoku puzzles.'
   tags: [ 'game', '2d grid' ]
+  difficulty: 'easy'
   description: 'Sudoku is a puzzle game played on a 9 by 9 grid. The objective is to fill the grid with numbers such that each row, column, and 3 by 3 subgrid contains every number from 1 to 9. The game starts with the grid partially completed so that there is only a single solution. In this project, you will create your own sudoku game using the BRIDGES Java API.'
   topics: [ 'Nested loops', '2D arrays', 'Booleans and conditionals', 'Reading source code', 'API usage' ]
   outcomes:
@@ -280,6 +294,7 @@
   title: 'Patterns in Song Lyrics'
   summary: 'Detect repetition in song lyrics and generate a graphical representation of the pattern.'
   tags: [ 'real-world data', 'parsing' ]
+  difficulty: 'easy'
   description: 'In this project, students access song lyrics using BRIDGES and check for repetition. They display the repetition with the ColorGrid class, creating patterns like the following:'
   image_caption: 'Example output for the song "Harder Faster Stronger" by Daft Punk.'
   topics: [ 'API usage', 'String processing', 'ColorGrid (BRIDGES class for pixel-based graphics)', 'Loops', 'Conditionals' ]
@@ -300,6 +315,7 @@
   title: 'Mountain Paths'
   summary: 'Given elevation data, find the path of least elevation change using a greedy algorithm.'
   tags: [ 'real-world data', 'path finding' ]
+  difficulty: 'easy'
   description: 'In this project, students read elevation data into a 2D array, compute the path of least elevation change using a greedy algorithm, and visualise the path with the ColorGrid class.'
   image_caption: 'In the map above, lighter shades mean higher elevation. The red line shows a "lowest elevation change" path traveling west to east.'
   # HTML?
@@ -336,6 +352,7 @@
   title: 'Earthquake Linked List'
   summary: 'Generate a singly linked list containing real-time earthquake data.'
   tags: [ 'real-world data', 'linked list' ]
+  difficulty: 'easy'
   description: 'Students create a linked list using real-time earthquake data from the US Geological Survey. This project involves reading source code and arranging code segments in the correct order.'
   image_caption: 'Each node represents an earthquake. The node''s color, size, and shape vary depending on the earthquake''s magnitude and location.'
   topics: [ 'Linked lists', 'Reading source code', 'API usage', 'Element class', 'EarthquakeUSGS class' ]
@@ -355,6 +372,7 @@
   title: 'US Cities Map'
   summary: 'Create a Map of Cities in the US'
   tags: [ 'real-world data' ]
+  difficulty: 'easy'
   description: 'Use information stored in the bridges library to create a map of the cities in the United States. You will learn the basics of how hashmaps work as well as creating graphs in bridges. '
   topics: [ 'City Class', 'Hashmap', 'Element Class', 'GraphAdjList' ]
   java:
@@ -368,6 +386,7 @@
   title: 'Maze Generator'
   summary: 'Build solvable mazes with a random-branching algorithm.'
   tags: [ '2d grid' ]
+  difficulty: 'easy'
   description: 'In this project, students use an algorithm to randomly generate mazes, and display them with the BRIDGES ColorGrid class. The maze is stored as a two-dimensional array of cells. It starts with a single cell in the center, and then branches randomly until the entire grid is filled.'
   topics: [ 'Enumerations', 'Arraylists', '2D arrays', 'Nested loops', 'API usage', 'Methods', 'Conditionals' ]
   java:
@@ -385,6 +404,7 @@
   title: 'Interpreter'
   summary: 'Create your own programming language.'
   tags: [ 'vector graphics', 'parsing' ]
+  difficulty: 'easy'
   description: 'In this project, students will create an interpreter for a simple programming language. The interpreter will parse a file into a list of commands, and then execute the commands, using BRIDGES to create circles, polygons, and lines.'
   image_caption: 'Example program and output'
   topics: [ 'Command line arguments', 'Try and catch blocks', 'Reading files', 'StringBuilder class', 'String parsing', 'Arraylists', 'BRIDGES SymbolCollection API' ]
@@ -401,6 +421,7 @@
   title: 'Street Map'
   summary: 'Use Dijkstra''s algorithm to find the shortest path across a city.'
   tags: [ 'real-world data', 'path finding' ]
+  difficulty: 'easy'
   description: 'A graph is a mathematical object consisting of connections (edges) between points (vertices). Graphs are used fairly often in computer science, because they can model many of the networks that arise from real-world data. In this project, we will use a technique called Dijkstra''s algorithm to find the shortest path across a city.'
   image_caption: 'Example output for New York City; the shortest path from the northwest to the southeast in marked in red.'
   topics: [ 'Graphs', 'Dijkstra''s algorithm', 'Records', 'Nested classes', 'Hash-maps and hash-sets', 'API usage' ]
